// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Behavior  NavBar click right first icon 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    
    <div
      class="at-icon at-icon-bullet-list"
    />
    <div
      class="at-icon at-icon-user"
    />
    
  </div>
</div>
`;

exports[`NavBar Behavior  NavBar click right second icon 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    
    <div
      class="at-icon at-icon-bullet-list"
    />
    <div
      class="at-icon at-icon-user"
    />
    
  </div>
</div>
`;

exports[`NavBar Behavior  NavBar onClickLeftIcon 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
  >
    <div
      class="at-icon at-icon-chevron-left"
    />
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props className 1`] = `
<div
  class="at-nav-bar test"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props color 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
    style="color: rgb(255, 255, 255);"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props customStyle 1`] = `
<div
  class="at-nav-bar"
  style="color: red;"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props fixed 1`] = `
<div
  class="at-nav-bar at-nav-bar--fixed"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props leftContent 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
    style="color: rgb(255, 255, 255);"
  >
    <div
      class="at-icon at-icon-chevron-left"
    />
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render NavBar -- props title 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    <span>
      test
    </span>
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;

exports[`NavBar Snap render initial NavBar 1`] = `
<div
  class="at-nav-bar"
>
  <div
    class="at-nav-bar__left-view"
  >
    <!---->
  </div>
  <div
    class="at-nav-bar__title"
  >
    
    
  </div>
  <div
    class="at-nav-bar__right-view"
  >
    <!---->
  </div>
</div>
`;
